feat: switch to magic link and remove download email notifications
